# autofill-browser

./: .gitignore  .npmrc  AGENTS.md  CONTEXT.md  LICENSE-MIT  README.md  SECURITY.md  agvt.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: agvt-ci.yml
apps/android-browser/: settings.gradle.kts
apps/chrome-extension/: .env.example  background.ts  package.json  popup.tsx  tsconfig.json  vitest.config.ts
apps/log-worker/: package.json  wrangler.jsonc
apps/sync-worker/: package.json  wrangler.jsonc
crates/agvt/: Cargo.toml  LICENSE-APACHE  README.md
crates/agvt/src/: audit.rs  charter.rs  cloudflare.rs  dossier.rs  error.rs  help.rs  keychain.rs  main.rs  mcp.rs  prepare.rs  presets.rs  reference.rs  sync.rs  totp.rs  vault.rs  wire.rs
crates/agvt/tests/: cli.rs  mcp.rs
docs/: agvt-cloudflare-token-policy.example.json  product-outline.md
docs/adr/: 0001-system-account-owns-user-data.md  0002-zero-knowledge-secure-vault.md  0003-vault-key-recovery-uses-passphrase-wrapping.md  0004-chrome-web-store-id-and-oauth-boundary.md  0005-api-token-vault-items.md  0006-secret-notes-before-passwords-and-totp.md  0011-agvt-is-agent-facing.md  (+7 more)
plans/: agent-home-phase1.md
scripts/: agent-vault-lib.mjs  agent-vault.mjs  agvt-native-host.mjs  check-extension-unpacked-build.mjs  generate-webstore-assets.mjs  install-agvt-native-host.sh  migrate-iam-dossier.sh  package-extension-zip.mjs  package-webstore-zip.mjs  set-google-oauth-client-id.mjs  setup-extension-key.mjs  sync-android-rules.mjs  verify-agent-vault-cli.mjs  verify-google-sync-e2e.mjs
(+43 files in other folders)
